[package]
name = "tcg-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
egui = "0"
image = { version = "0.24", default-features = false, features = ["png", "webp"] }
egui_extras = { version="0", features = ["image"] }
eframe = "0"
int-enum = "0"
bitvec = "1"
