[package]
name = "tcg-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0"
actix = "0"
actix-web = "4"
actix-web-actors = "4"
int-enum = "0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
